@startuml
title "**中介者模式**"

abstract class Mediator {
}
note top: 抽象中介者，定义了同事\n对象到中介者对象的接口。

class ConcreteMediator
note bottom: 具体中介者对象，实现抽象类的方法，\n它需要知道所有具体的同事，并从具体\n同事接收消息，向具体同事对象发出命令。

abstract class Colleague {
  - mediator :Mediator
}
note top: 抽象同事

class ConcreteColleague1
class ConcreteColleague2

note "具体同事类，每个具体同事只知道自己的行为，\n而不了解其它同事类的情况，但它们却都认识中介者对象。" as ccn
ConcreteColleague1 .. ccn
ConcreteColleague2 .. ccn



Mediator <|-- ConcreteMediator
Mediator <-left- "-mediator" Colleague

Colleague <|-- ConcreteColleague1
Colleague <|-- ConcreteColleague2

ConcreteMediator --> ConcreteColleague1
ConcreteMediator --> ConcreteColleague2

footer D瓜哥 · https://www.diguage.com · 出品
@enduml
